Fix companies' logos on narrow screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -279,6 +279,7 @@ article,
       padding: 1em;
       img {
         max-height: 60px;
+        max-width: 100%;
       }
     }
   }
